[package]
name = "sim-em-simple"
version = "0.1.0"
authors = [ "Alexi Chepura <a.chepura@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.6.1" }
bevy_egui = "0.12.1"
nalgebra = "^0.30.1"
parry3d = "^0.8"
smooth-bevy-cameras = "0.2.0"